--- a/index.html
+++ b/index.html
@@ -113,20 +113,18 @@
             <p class="author" style="font-size: 1.3rem; margin: 0.3rem 0 0;">— כותב 5</p>
           </div>
         </div>
-        </div>
-        </div>
       </div>
+    </div>
 
-      <!-- Overlay + Content -->
-      <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center text-center hero-overlay">
-        <div class="container position-relative">
-          <div class="hero-text-bg p-4 p-md-5 rounded-4 shadow-lg">
-            <h1 class="display-3 display-md-2 fw-bold mb-3 mb-md-4 text-shadow">משטרת לוס סנטוס</h1>
-            <p class="lead fs-4 fs-md-3 mb-4 mb-md-5 text-shadow">אתר מידע לשוטרים</p>
-            <p class="lead fs-4 fs-md-3 mb-4 mb-md-5 text-shadow fst-italic">
-              "To Obey & Survive"
-            </p>
-          </div>
+    <!-- Overlay + Content -->
+    <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center text-center hero-overlay">
+      <div class="container position-relative">
+        <div class="hero-text-bg p-4 p-md-5 rounded-4 shadow-lg">
+          <h1 class="display-3 display-md-2 fw-bold mb-3 mb-md-4 text-shadow">משטרת לוס סנטוס</h1>
+          <p class="lead fs-4 fs-md-3 mb-4 mb-md-5 text-shadow">אתר מידע לשוטרים</p>
+          <p class="lead fs-4 fs-md-3 mb-4 mb-md-5 text-shadow fst-italic">
+            "To Obey & Survive"
+          </p>
         </div>
       </div>
     </div>
@@ -175,22 +173,18 @@ document.addEventListener("DOMContentLoaded", () => {
 
   let users = JSON.parse(localStorage.getItem("lspd_users")) || {};
   
-  // יצירה מחדש של משתמש אדמין אם חסר (זה חשוב!)
   if (!users[ADMIN_USERNAME]) {
     users[ADMIN_USERNAME] = {
       password: ADMIN_PASSWORD,
       isAdmin: true
     };
     localStorage.setItem("lspd_users", JSON.stringify(users));
-    console.log("נוצר משתמש אדמין חדש אוטומטית");
   }
 
-  // פתיחת מודאל
   document.getElementById("loginBtn")?.addEventListener("click", () => {
     new bootstrap.Modal(document.getElementById("loginModal")).show();
   });
 
-  // טופס התחברות
   document.getElementById("loginForm")?.addEventListener("submit", (e) => {
     e.preventDefault();
 
@@ -207,7 +201,6 @@ document.addEventListener("DOMContentLoaded", () => {
       localStorage.setItem("lspd_loggedIn", "true");
       localStorage.setItem("lspd_currentUser", username);
       
-      // עדכון נראות
       document.getElementById("loginBtn")?.classList.add("d-none");
       document.getElementById("logoutMenu")?.classList.remove("d-none");
       document.getElementById("commandMenu")?.classList.remove("d-none");
@@ -218,22 +211,18 @@ document.addEventListener("DOMContentLoaded", () => {
 
       bootstrap.Modal.getInstance(document.getElementById("loginModal"))?.hide();
       error.textContent = "";
-      console.log("התחברות הצליחה →", username);
-      alert("התחברת! (עכשיו רענן ותראה אם נשאר מחובר)");
+      alert("התחברת בהצלחה!");
     } else {
       error.textContent = "שם משתמש או סיסמה לא נכונים";
-      console.log("ניסיון כושל:", {username, password});
     }
   });
 
-  // התנתקות
   document.getElementById("logoutBtn")?.addEventListener("click", () => {
     localStorage.removeItem("lspd_loggedIn");
     localStorage.removeItem("lspd_currentUser");
     location.reload();
   });
 
-  // בדיקה ראשונית – עדכון מצב navbar
   if (localStorage.getItem("lspd_loggedIn") === "true") {
     const user = localStorage.getItem("lspd_currentUser");
     document.getElementById("loginBtn")?.classList.add("d-none");
@@ -244,6 +233,37 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   }
 
+  // טיפול בתלונה אנונימית
+  document.getElementById("complaintForm")?.addEventListener("submit", (e) => {
+    e.preventDefault();
+
+    const commander = document.getElementById("commanderName").value.trim();
+    const badge = document.getElementById("badgeNumber").value.trim();
+    const subject = document.getElementById("subject").value.trim();
+    const content = document.getElementById("content").value.trim();
+
+    if (!commander || !badge || !subject || !content) {
+      alert("יש למלא את כל השדות!");
+      return;
+    }
+
+    let complaints = JSON.parse(localStorage.getItem("lspd_complaints")) || [];
+    
+    const newComplaint = {
+      id: Date.now(),
+      commander,
+      badge,
+      subject,
+      content,
+      date: new Date().toLocaleString("he-IL")
+    };
+
+    complaints.push(newComplaint);
+    localStorage.setItem("lspd_complaints", JSON.stringify(complaints));
+
+    alert("תלונה נשלחה בהצלחה (אנונימית)");
+    e.target.reset();
+  });
 });
 </script>
 </body>
